字体更新 cdn地址；调整获取翻译文件方式。

--- a/css/udpi.css
+++ b/css/udpi.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: 'Source Han Sans';
-  src: url('https://www.ulanzistudio.com/font/SourceHanSansSC-Regular-2.otf') format('opentype');
+  src: url('//cdn.ulanzistudio.com/font/SourceHanSansSC-Regular-2.otf') format('opentype');
 }
 :root {
   --udpi-bgcolor: #282828;
