--- a/css/udpi.css
+++ b/css/udpi.css
@@ -1,8 +1,8 @@
 
-@font-face {
+/* @font-face {
   font-family: 'Source Han Sans';
   src: url('//cdn.ulanzistudio.com/font/SourceHanSansSC-Regular-2.otf') format('opentype');
-}
+} */
 :root {
   --udpi-bgcolor: #282828;
   --udpi-background: #3D3D3D;
@@ -33,7 +33,7 @@ html {
 
 html,
 body {
-  font-family: 'Source Han Sans', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Source Han Sans SC', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 9pt;
   background-color: var(--udpi-bgcolor);
   color: #9a9a9a;
